[gd_scene load_steps=10 format=3 uid="uid://ys6hxwf0nyca"]

[ext_resource type="PackedScene" uid="uid://bq8e70vj3dflx" path="res://Escenas/celda.tscn" id="1_6lbni"]
[ext_resource type="Script" uid="uid://dbkkw4n5sqgmt" path="res://Scripts/main.gd" id="1_vt1rs"]
[ext_resource type="Script" uid="uid://bnnyqnipikg2v" path="res://Scripts/gimbal_camara.gd" id="3_0kh0y"]

[sub_resource type="BoxMesh" id="BoxMesh_0kh0y"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_vt1rs"]
albedo_color = Color(1, 0, 0, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_0kh0y"]
albedo_color = Color(0.7166667, 1, 0, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_vt1rs"]
material = SubResource("StandardMaterial3D_0kh0y")
top_radius = 0.1
bottom_radius = 0.1
height = 3.0

[sub_resource type="BoxMesh" id="BoxMesh_7xwpo"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_2ia52"]
albedo_color = Color(0, 0, 0, 1)

[node name="Main" type="Node3D"]
script = ExtResource("1_vt1rs")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8.669159, 0, 0)
shadow_enabled = true

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(0.9998239, 0.010780016, 0.015360493, -0.016580531, 0.12412129, 0.9921286, 0.008788597, -0.9922085, 0.12427819, 5.309278, 16.44951, 0.39614773)
visible = false
fov = 54.05344

[node name="Celda" parent="." instance=ExtResource("1_6lbni")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.018486023, 0, 0.33319807)
visible = false

[node name="Cabezal" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.2885146, 2.9507885, 2.8918505)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Cabezal"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.2, -3)
mesh = SubResource("BoxMesh_0kh0y")
surface_material_override/0 = SubResource("StandardMaterial3D_vt1rs")

[node name="EjeServo" type="Node3D" parent="Cabezal"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.4905958, -4.0689764)

[node name="Actuador" type="MeshInstance3D" parent="Cabezal/EjeServo"]
transform = Transform3D(1.5, 0, 0, 0, 1.5, 0, 0, 0, 1.5, 0, -1.2752495, 0)
mesh = SubResource("CylinderMesh_vt1rs")
skeleton = NodePath("../..")

[node name="CuerpoServo" type="MeshInstance3D" parent="Cabezal"]
transform = Transform3D(0.009895825, 0, 0.19998792, 0, 0.4, 0, -0.89994556, 0, 0.0021990722, -0.23869562, 1.4245462, -3.861729)
mesh = SubResource("BoxMesh_7xwpo")
surface_material_override/0 = SubResource("StandardMaterial3D_2ia52")

[node name="Cinta" type="Node3D" parent="."]

[node name="GimbalCamara" type="Node3D" parent="."]
script = ExtResource("3_0kh0y")

[node name="Camera3D" type="Camera3D" parent="GimbalCamara"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4, 8)
current = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Panel" type="Panel" parent="CanvasLayer/Control"]
layout_mode = 0
offset_right = 179.0
offset_bottom = 238.0

[node name="NumeroA" type="Label" parent="CanvasLayer/Control/Panel"]
layout_mode = 0
offset_left = 3.0
offset_top = 34.0
offset_right = 143.0
offset_bottom = 57.0
text = "\"Primer Numero:\""

[node name="InputA" type="SpinBox" parent="CanvasLayer/Control/Panel"]
layout_mode = 0
offset_left = 14.0
offset_top = 63.0
offset_right = 100.5625
offset_bottom = 94.0

[node name="NumeroB" type="Label" parent="CanvasLayer/Control/Panel"]
layout_mode = 0
offset_left = 7.0
offset_top = 93.0
offset_right = 165.0
offset_bottom = 116.0
text = "\"Segundo Numero: \""

[node name="InputB" type="SpinBox" parent="CanvasLayer/Control/Panel"]
layout_mode = 0
offset_left = 17.0
offset_top = 123.0
offset_right = 103.5625
offset_bottom = 154.0

[node name="BotonStart" type="Button" parent="CanvasLayer/Control/Panel"]
layout_mode = 0
offset_left = 5.0
offset_top = 162.0
offset_right = 161.0
offset_bottom = 193.0
text = "Ejecutar Operacion"

[node name="BotonReset" type="Button" parent="CanvasLayer/Control/Panel"]
layout_mode = 0
offset_left = 5.0
offset_top = 197.0
offset_right = 81.0
offset_bottom = 228.0
text = "Reiniciar"

[node name="Celda2" parent="." instance=ExtResource("1_6lbni")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.2273946, 0, 0.33319807)
visible = false

[node name="Celda2" parent="Celda2" instance=ExtResource("1_6lbni")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.0510793, 0, 0.33319807)
